# airflow-cdk-aws

./: README.md  app.py  cdk.context.json  cdk.json  constantes.py  deploy.sh  destroy.sh  pyproject.toml
cdk.out/: MWAA-Backend.template.json  MWAA-Environment.template.json  manifest.json  tree.json
dags/: dag-cripto.py  dag-twitter.py
dags/functions/dados_twitter/: databricks.py  handler.py  twitter.py
